# hedgingbot

./: .gitignore  README.md  pyproject.toml
self_healing_bot_template/: .env.example  Dockerfile  README.md  docker-compose.yml  healthcheck.py  main.py
self_healing_bot_template/self_healing_bot/: alerting.py  config.py  exchange.py  health.py  httpserver.py  models.py  notify.py  reconcile.py  runtime.py
self_healing_bot_template/systemd/: self-healing-bot.service
src/hedgingbot/: __init__.py  meta_twin.py
tests/: test_meta_twin.py
